# personal-site

./: .dev.vars  .dockerignore  .env.template  .eslintignore  .eslintrc.cjs  .gitignore  .graphqlconfig  .graphqlconfig.template  .npmrc  .prettierignore  .prettierrc  .webstorm.js  Dockerfile  README.md  bun.lockb  cloud-init.yml  drizzle.config.ts  eslint.config.js  fauna.backup.js  fauna.graphql  fauna.test.schema.graphql  fly.production.toml  fly.staging.toml  fly.toml  graphql.config.yml  package-lock.json  package.json  postcss.config.js  rollup.config.js  schema.graphql  svelte.config.js  tailwind.config.js  tailwind.config.ts  test.schema.graphql  vite.config.js  wrangler.toml
.storybook/: main.ts  preview-head.html  preview.ts
.zed/: settings.json
archive/: svelte.config.js
drizzle/: schema.pg.ts  schema.sqlite.ts  schema.ts  seed.sql  types.ts
fauna/: query.graphql
src/: App.svelte  CV.svelte  Car.svelte  Header.svelte  Lang.svelte  ProfileLayout.svelte  Style.svelte  app.css  app.d.ts  app.html  app.scss  blog.json  fonts.css  fonts.scss  hooks.server.ts  hooks.ts  routes.js  service-worker.js  stores.js  stores.ts  (+2 more)
workers/vr-www-signatures-rs/: .dev.vars  .gitignore  Cargo.toml  wrangler.toml
workers/vr-www-signatures-rs/bruno/: Check if signature exists by ID.bru  Get a signature by ID.bru  Get all approved signatures.bru  Get all signatures.bru  Insert a signature.bru  Update a signature.bru  bruno.json  collection.bru
workers/vr-www-signatures-rs/bruno/environments/: Local.bru  Remote.bru
workers/vr-www-signatures-rs/src/: lib.rs
(+292 files in other folders)
