[package]
name = "vr-www-signatures-rs"
version = "0.1.0"
edition = "2021"
authors = ["v-rogg <mail@valentinrogg.de>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[build]
command = "cargo install -q worker-build && worker-build --release"

[lib]
crate-type = ["cdylib"]

[dependencies]
uuid = { version = "1.11.0", features = ["v4", "js"] }
worker = { version = "0.4.2", features = ["d1"] }
worker-macros = { version = "0.4.2" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.99"
serde-wasm-bindgen = "0.6.5"
chrono = { version = "0.4.38", features = [] }
human_ids = "0.1.1"
petname = "2.0.2"
